# Backend_Health

./: .gitignore  README.md  pyproject.toml
.github/workflows/: backend-health-pull.yml  ci.yml
backend_health/: __init__.py  __main__.py  alerts.py  bigquery_schema.py  bigquery_sink.py  cli.py  config.py  credentials.py  health_state.py  metrics.py  nerdgraph.py  pipeline.py  retry.py  tenants.py  verdict.py
config/: tenants.example.yaml
docs/: bigquery.md  credentials.md  dashboard.md  multi-tenant.md  onboarding.md  reliability.md  tenants.md  verdict.md
docs/adr/: 0001-pull-job-architecture.md
scripts/: check_no_secrets.py
sql/: schema.sql
sql/views/: daily_tenant_metrics.sql  latest_tenant_verdict.sql  tenant_health_verdict.sql
tests/: test_alerts.py  test_bigquery_schema.py  test_bigquery_sink.py  test_cli.py  test_config.py  test_credentials.py  test_health_state.py  test_nerdgraph.py  test_pipeline.py  test_retry.py  test_verdict.py  test_verdict_integration.py
